# admin-tools

./: .gitignore  .gitmodules  Makefile  README.md  admin-tools.appdata.xml  admin-tools.py  appimage.yml  autogen.sh  configure.ac  obs_service
src/: Makefile  Makefile.am  YastConfig.cmake  YastConfig.cmake.in  bootstrap.sh  configure  find_curses.patch  libyui_configure  libyui_makefile  y2tool  yast-ruby-bindings.make.in  yast2-devtools.pc
src/clients/: Makefile.am  admin-tools.in  admin-tools.py  gen_yast.py  yast.py  yui_ext.cpp  yui_ext.h  yui_ext.i
src/modules/: Package.py  PackageSystem.py  Platform.py  SuSEFirewall.py
tests/: .gitignore  SambaToolDnsAPI.py  adcommon  adsi.py  aduc.py  common.py  dns.py  gpmc.py  runner.py  yast.py
